add apis for create order, update order, get all orders and get order by id

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - DB_URL=postgresql://postgres:postgres@flask_db:5432/postgres
     depends_on:
       - flask_db
+    volumes:
+      - ./app:/app
   flask_db:
     container_name: flask_db
     image: postgres:12
